fix after testing api by postman