@@ -9,9 +9,7 @@ import com.epam.core.exception.GetMetadataByIdException;
 import com.epam.core.exception.MetadataAlreadyExistException;
 import com.epam.data.entity.SongMetadata;
 import com.epam.data.repository.SongMetadataRepository;
-import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
-import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -31,22 +29,13 @@ import java.util.Objects;
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 @Transactional(readOnly = true, isolation = Isolation.READ_COMMITTED, propagation = Propagation.SUPPORTS)
 public class SongMetadataService {
 
-    static String IDS = "ids";
-    static String RESTRICTION_CSV_STRING_CANNOT_BE_EMPTY = "Restriction: CSV string cannot be empty.";
-    static String THE_PROVIDED_ID_S_IS_INVALID =
-            "The provided ID's is invalid (e.g., contains letters, decimals, is negative, or zero).";
-    static String RESTRICTION_CSV_STRING_LENGTH_MUST_BE_LESS_THAN_200_CHARACTERS =
-            "Restriction: CSV string length must be less than 200 characters.";
-    static String RESTRICTION_SONG_METADATA_WITH_THE_SPECIFIED_ID_S_DOES_NOT_EXIST =
-            "Restriction: Song metadata with the specified ID's does not exist.";
-    static String LOG_INFO = ": '{}'";
+    private static final String RESTRICTION = "Restriction";
 
-    SongMetadataRepository metadataRepository;
-    ConversionService conversionService;
+    private final SongMetadataRepository metadataRepository;
+    private final ConversionService conversionService;
 
     @Transactional(propagation = Propagation.REQUIRED, isolation = Isolation.SERIALIZABLE, timeout = 30,
             rollbackFor = DeleteMetadataByIdsException.class
@@ -61,43 +50,39 @@ public class SongMetadataService {
                 .map(Integer::parseInt)
                 .toList();
 
-        validateSplittedIds(splittedIds);
-
         log.debug("Validated and parsed ID's: '{}'", splittedIds);
-        List<Integer> idsForRemoving = metadataRepository.findByResourceIdIn(splittedIds);
+        List<Integer> idsForRemoving = metadataRepository.findByIdIn(splittedIds);
 
-        validateIdsForRemoving(idsForRemoving);
+//        validateIdsForRemoving(idsForRemoving);
 
-        log.debug("Deleting metadata for ID's': '{}'", idsForRemoving);
+        log.debug("Deleting metadata by ID's': '{}'", idsForRemoving);
         metadataRepository.deleteAllById(idsForRemoving);
 
-        log.info("Successfully deleted metadata for ID's: '{}'", idsForRemoving);
+        log.info("Successfully deleted metadata by ID's: '{}'", idsForRemoving);
         return new DeletedByIdsResponseDto(idsForRemoving);
     }
 
     private void validateIdsForRemoving(List<Integer> idsForRemoving) {
         if (CollectionUtils.isEmpty(idsForRemoving)) {
-            Map<String, String> errorDetails = Collections.singletonMap(IDS,
-                    RESTRICTION_SONG_METADATA_WITH_THE_SPECIFIED_ID_S_DOES_NOT_EXIST);
-            log.error(RESTRICTION_SONG_METADATA_WITH_THE_SPECIFIED_ID_S_DOES_NOT_EXIST + LOG_INFO, idsForRemoving);
+            Map<String, String> errorDetails = Collections.singletonMap(RESTRICTION,
+                    "Song metadata with the specified ID's does not exist.");
+            log.error("Restriction: Song metadata with the specified ID's does not exist: '{}'", idsForRemoving);
             throw new DeleteMetadataByIdsException(HttpStatus.NOT_FOUND, errorDetails);
-        }
-    }
-
-    private void validateSplittedIds(List<Integer> splittedIds) {
-        if (splittedIds.size() > 200) {
-            Map<String, String> errorDetails = Collections.singletonMap(IDS,
-                    RESTRICTION_CSV_STRING_LENGTH_MUST_BE_LESS_THAN_200_CHARACTERS);
-            log.error(RESTRICTION_CSV_STRING_LENGTH_MUST_BE_LESS_THAN_200_CHARACTERS + LOG_INFO, splittedIds);
-            throw new DeleteMetadataByIdsException(errorDetails);
         }
     }
 
     private void validateRequestIds(String requestIds) {
         if (StringUtils.isBlank(requestIds)) {
-            Map<String, String> errorDetails = Map.of(IDS, RESTRICTION_CSV_STRING_CANNOT_BE_EMPTY);
-            log.error(RESTRICTION_CSV_STRING_CANNOT_BE_EMPTY);
-            throw new DeleteMetadataByIdsException(errorDetails);
+            Map<String, String> errorDetails = Map.of(RESTRICTION, "CSV string cannot be empty.");
+            log.error("Restriction: CSV string cannot be empty.");
+            throw new DeleteMetadataByIdsException("Validation failure", errorDetails);
+        }
+
+        if (requestIds.length() > 200) {
+            Map<String, String> errorDetails = Collections.singletonMap(RESTRICTION,
+                    "CSV string length must be less than 200 characters.");
+            log.error("Restriction: CSV string length must be less than 200 characters. Actual length: '{}'", requestIds.length());
+            throw new DeleteMetadataByIdsException("Actual length: '{%d}'".formatted(requestIds.length()), errorDetails);
         }
 
         List<String> invalidIds = Arrays.stream(StringUtils.split(requestIds, ","))
@@ -106,8 +91,9 @@ public class SongMetadataService {
                 .toList();
 
         if (CollectionUtils.isNotEmpty(invalidIds)) {
-            Map<String, String> errorDetails = Map.of(IDS + ": " + invalidIds, THE_PROVIDED_ID_S_IS_INVALID);
-            log.error(THE_PROVIDED_ID_S_IS_INVALID + LOG_INFO, invalidIds);
+            Map<String, String> errorDetails = Map.of("ids: " + invalidIds,
+                    "The provided ID's is invalid (e.g., contains letters, decimals, is negative, or zero).");
+            log.error("The provided ID's is invalid (e.g., contains letters, decimals, is negative, or zero): '{}'", invalidIds);
             throw new DeleteMetadataByIdsException(errorDetails);
         }
     }
@@ -122,7 +108,7 @@ public class SongMetadataService {
                 .orElseThrow(() -> {
                     log.error("Song metadata with the specified ID '{}' does not exist.", requestId);
                     return new GetMetadataByIdException(
-                            "Song metadata with the specified ID %s does not exist".formatted(requestId), HttpStatus.NOT_FOUND);
+                            "Song metadata with the specified ID '%s' does not exist".formatted(requestId), HttpStatus.NOT_FOUND);
                 });
 
         SongMetadataResponseDto responseDto = conversionService.convert(fetchedSongMetadata, SongMetadataResponseDto.class);
@@ -133,7 +119,7 @@ public class SongMetadataService {
 
     private void validateRequestId(Integer requestId) {
         if (Objects.isNull(requestId) || requestId <= 0) {
-            Map<String, String> errorDetails = Map.of("id",
+            Map<String, String> errorDetails = Map.of(RESTRICTION,
                     "The provided ID is invalid (e.g., contains letters, decimals, is negative, or zero).");
             log.error("The provided ID is invalid (e.g., contains letters, decimals, is negative, or zero).");
             throw new GetMetadataByIdException(errorDetails);
@@ -162,7 +148,7 @@ public class SongMetadataService {
             Map<String, String> errorDetails = Map.of("id: '{%d}'".formatted(requestDto.getId()),
                     "Metadata for this ID already exists.");
             log.error("Metadata existence check for ID '{}': '{}'", requestDto.getId(), isMetadataExist);
-            throw new MetadataAlreadyExistException("Metadata already exists for the given ID.", errorDetails);
+            throw new MetadataAlreadyExistException("Metadata already exists for the given ID: '%d'".formatted(requestDto.getId()), errorDetails);
         }
     }
 }
